# ttm

./: .gitignore  LICENSE  README.md  compile.sh  pyproject.toml  startstop  startstop.c  startstop.py  ttm.py
.github/: FUNDING.yml
startstop/: startstop.py
