[tool.poetry]
name = "startstop"
version = "0.6.0"
description = "Tiny task manager for Linux, MacOS and Unix-like systems"
authors = ["Yuri Escalianti <yuriescl@gmail.com>"]
license = "MIT License"
homepage = "https://github.com/yuriescl/startstop"
packages = [
    { include = "startstop.py" }
]

[tool.poetry.scripts]
startstop = 'startstop:main'

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.971"
pynvim = "^0.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
