[tool.poetry]
name = "ttm"
version = "0.13.0"
description = "Tiny task manager for Linux, MacOS and Unix-like systems"
authors = ["Yuri Escalianti <yuriescl@gmail.com>"]
license = "MIT License"
homepage = "https://github.com/yuriescl/ttm"
packages = [
    { include = "ttm.py" }
]

[tool.poetry.scripts]
ttm = 'ttm:main'

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.971"
pynvim = "^0.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
